updated readme with live link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://anukuljoshi.github.io/sort-visualizer-v2",
+  "homepage": "https://anukuljoshi.github.io/sort-visualizer-v2/",
   "name": "visualizations",
   "version": "0.1.0",
   "private": true,
